--- a/userhome/bluej/bluej.properties
+++ b/userhome/bluej/bluej.properties
@@ -1,10 +1,11 @@
 #BlueJ properties. Settings in this file override "bluej.defs"
-#Thu May 04 11:18:12 CDT 2017
+#Thu May 04 11:40:45 CDT 2017
 bluej.editor.fontsize=12
 bluej.startWithTextEval=false
-bluej.openPackage1=F\:\\snake
+bluej.openPackage1=C\:\\Users\\18mac03\\Desktop\\Snake\\Snake
 extensions.org.bluej.extensions.submitter.Submitter.settings.saslrealm=
-bluej.recentProject0=F\:\\snake
+bluej.recentProject1=F\:\\snake
+bluej.recentProject0=C\:\\Users\\18mac03\\Desktop\\Snake\\Snake
 bluej.uid=aeb223cf-22e7-4c53-a0e9-9eb014ffeffc
 bluej.terminal.y=16
 bluej.terminal.x=16
