--- a/userhome/bluej/bluej.properties
+++ b/userhome/bluej/bluej.properties
@@ -1,12 +1,18 @@
 #BlueJ properties. Settings in this file override "bluej.defs"
-#Thu May 04 11:40:45 CDT 2017
+#Fri May 12 12:05:52 CDT 2017
+bluej.terminal.recordcalls=true
 bluej.editor.fontsize=12
 bluej.startWithTextEval=false
-bluej.openPackage1=C\:\\Users\\18mac03\\Desktop\\Snake\\Snake
+bluej.openPackage1=C\:\\Users\\18mac03\\Documents\\GitHub\\Snake
+bluej.terminal.clearscreen=true
 extensions.org.bluej.extensions.submitter.Submitter.settings.saslrealm=
-bluej.recentProject1=F\:\\snake
-bluej.recentProject0=C\:\\Users\\18mac03\\Desktop\\Snake\\Snake
+bluej.recentProject2=F\:\\snake
+bluej.recentProject1=C\:\\Users\\18mac03\\Desktop\\Snake\\Snake
+bluej.recentProject0=C\:\\Users\\18mac03\\Documents\\GitHub\\Snake
+bluej.debugger.y=472
+bluej.terminal.buffering=true
 bluej.uid=aeb223cf-22e7-4c53-a0e9-9eb014ffeffc
-bluej.terminal.y=16
-bluej.terminal.x=16
+bluej.debugger.x=673
+bluej.terminal.y=209
+bluej.terminal.x=662
 blackbox.uuid=optout
